app/assets/stylesheets/custom.css.scss
@import 'defs';

body {
  background-color: $white-color;
}

#page {
  min-height: 500px;
  padding-bottom: $footer-height;
}

header, footer {
  background-color: $primary-color;
  color: $light-text-color;
  position: relative;
}

.mainlogo {
  max-height: 200px;
}

header.main, footer {
  z-index: 10;
  padding: $padding-size;
}

header.main {
  background: $primary-color image-url('banner1.png') no-repeat center center;
  @include background-size(cover);
  height: 80vh;
  min-height: 460px;
  z-index: 10;

  .container {
    position: absolute;
    left: 50%;
    top: 50%;
    @include translate(-50%,-50%);

    .row {
      padding: $padding-size;
    }
  }
}

.fixed {
  @include border-box;
  position: fixed;
  top: 0;
  width: 100%;
  left: 0;
}

header.fixed {
  z-index: 5;
  padding: 10px;
}

div.fixed {
  z-index: 15;
}

footer {
  @include border-box();
  position: fixed;
  width: 100%;
  bottom: 0;
  left: 0;
  height: $footer-height;
}

.center {
  width: $content-width;
  margin: 0 auto;
  overflow: hidden;
}

.right {
  text-align:right;
}

.accent {
  color: $accent-color;
}

section {
  padding-top: $padding-size;
  padding-bottom: $padding-size;
}

section.container {
  margin-bottom: 50px;
}
 
.glyphicon {
  padding-top: $padding-size;
  font-size: 48px;
}

#pathphoto {
  background: $primary-color image-url('pathusplash.1.png') no-repeat center center;
  @include background-size(cover);
  height: 800px;
  
  .container {
    margin-top: 300px;
    
    h1 {
      color: $white-color;
    }
  }
}

.findscreenshot {
  max-width: 400px;
}

.featuressubheading {
  color: #fff;
  font-size: 22px;
  background-color: #997e57;
  padding: 5px 10px;
}

#steps {
  background: $primary-color image-url('steps2.png') no-repeat center center;
  @include background-size(cover);
  height: 400px;
  
  .container {
    margin-top: 120px;
    
    h2 {
      color: $white-color;
    }
  }
}

#signup {
  text-align: center;
  position: relative;
  padding: $padding-size;
}

.position {
  color: $dark-gray-color;
  margin-top: 25px;
  text-align: center
}

.name {
  text-align: center;
}

.blurb {
  text-align: center;
  margin-top: 30px;
  padding: $padding-size;
}

.container {
  text-align: center;
  
  #one {
    height: 150px;
  }
  
  #two {
    height: 150px;
  }
  
  #three {
    height: 150px;
  }
}

.chakra {
  position: relative;
  text-align:center;
}

.container.row {
  position: relative;
  text-align: center;
}

#features {
  display: block;
  text-align: center;
}

#phonetext {
  text-align: left;
}

.col-xs-12.col-sm7.text-right {
  display: inline-block;
}

